--- a/src/gui/tuna_gui.ui
+++ b/src/gui/tuna_gui.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="settings_tabs">
      <property name="currentIndex">
-      <number>0</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="tab_basic">
       <attribute name="title">
@@ -1086,7 +1086,7 @@
         </layout>
        </item>
        <item>
-        <widget class="QPushButton" name="pb_refresh_vlc">
+        <widget class="QPushButton" name="btn_refresh_vlc">
          <property name="text">
           <string>tuna.gui.vlc.refresh</string>
          </property>
