fixed mpd cover not switching when pausing/unpausing mpd tab only offers covers for local servers now

--- a/src/gui/tuna_gui.ui
+++ b/src/gui/tuna_gui.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>710</width>
+    <width>707</width>
     <height>701</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>tuna.gui.title</string>
@@ -16,8 +28,14 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTabWidget" name="settings_tabs">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="currentIndex">
-      <number>5</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_basic">
       <attribute name="title">
@@ -229,6 +247,12 @@
            <layout class="QHBoxLayout" name="horizontalLayout_18">
             <item>
              <widget class="QTableWidget" name="tbl_outputs">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="editTriggers">
                <set>QAbstractItemView::NoEditTriggers</set>
               </property>
@@ -957,6 +981,16 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
+        <widget class="QRadioButton" name="rb_local">
+         <property name="text">
+          <string>tuna.gui.tab.mpd.local</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QLabel" name="label_10">
          <property name="text">
           <string>tuna.gui.tab.mpd.base.folder</string>
@@ -1015,12 +1049,12 @@
         </widget>
        </item>
        <item>
-        <widget class="QCheckBox" name="cb_local">
+        <widget class="QRadioButton" name="rb_remote">
          <property name="text">
-          <string>tuna.gui.tab.mpd.local</string>
+          <string>tuna.gui.tab.mpd.remote</string>
          </property>
          <property name="checked">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -1390,6 +1424,12 @@
        </item>
        <item>
         <widget class="QPlainTextEdit" name="plainTextEdit">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="readOnly">
           <bool>true</bool>
          </property>
